--- a/src/single-issue.html
+++ b/src/single-issue.html
@@ -18,13 +18,12 @@
                     {{> partials/content/product-reviews}}
                     {{> partials/content/product-info}}
                </div>
-               <aside id="buyBox" class="col-sm-7 col-md-6 col-lg-4 order-2 order-lg-3 py-3 py-md-5">
+               <aside id="sidebar" class="col-sm-7 col-md-6 col-lg-4 order-2 order-lg-3 py-3 py-md-5">
                     <div class="sticky-lg-top pt-4 mt-n4">
                          <div class="d-none d-sm-block d-lg-none">
                               {{> partials/content/product-title}}
                          </div>
-                         <h6 class="text-primary mb-3">Annual Subscription</h6>
-                         {{> partials/content/select-format}}
+                         {{> partials/content/buybox-single-issue}}
                     </div>
                </aside>
           </section>
