--- a/src/single-issue.html
+++ b/src/single-issue.html
@@ -2,7 +2,7 @@
 <html lang="en">
 {{> partials/structure/open}}
 
-          <section id="commerceSection" class="row gx-4 gx-lg-5">
+          <section id="commerceSection" class="row">
                <div id="productImages" class="col-sm-5 col-md-6 col-lg-3 py-3 pt-md-3">
                     <div class="sticky-lg-top pt-4 mt-n4">
                          <div class="d-sm-none">
